src/test/ui/feature-gates/feature-gate-existential-type.stderr
error[E0658]: existential types are unstable
  --> $DIR/feature-gate-existential-type.rs:3:1
   |
LL | existential type Foo: std::fmt::Debug;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/34511
   = help: add #![feature(existential_type)] to the crate attributes to enable

error[E0658]: existential types are unstable
  --> $DIR/feature-gate-existential-type.rs:11:5
   |
LL |     existential type Baa: std::fmt::Debug;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/34511
   = help: add #![feature(existential_type)] to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
